--- a/Changes
+++ b/Changes
@@ -2,3 +2,4 @@ Changes for Perl extension POE-Declare-Log-File
 
 0.01 to be released
 	- Creating initial implementation
+	- Adding Lazy file creation support
